--- a/Learners.css
+++ b/Learners.css
@@ -481,7 +481,7 @@ button:focus
        line-height: 11px;
        padding-top: 15%;
       }
-      .head .Footer_conatiner{
-        padding-top: 120%
+      .page{
+        padding-top: 10%
       }
   }
