--- a/Learners.css
+++ b/Learners.css
@@ -470,6 +470,7 @@ button:focus
  .purpose
  {
      padding: 8%;
+ 
  }
   @media only screen and (min-device-width:768px) and (max-device-width:2560px)
   {
@@ -485,8 +486,14 @@ button:focus
     background-color: #008CBA;
     }
   }
-  @media only screen and (min-device-width:320px) and (max-device-width:425px)
+  @media only screen and (min-device-width:319px) and (max-device-width:425px)
   {
+    .head{
+        background-image:url("ill_header_3.png");
+        background-repeat:no-repeat;
+        background-position:right top;
+        background-size:1%  15%;
+      }
     .text {
         font-size: 10px;
        text-align: center;
@@ -519,6 +526,14 @@ button:focus
   }
   .col-2  .icons
   {
+
       width: 65px;
   }
   
+  
+  .head{
+    background-image:url("ill_header_3.png");
+    background-repeat:no-repeat;
+    background-position:right top;
+    background-size: 50% 90%;
+  }
