--- a/Learners.css
+++ b/Learners.css
@@ -472,6 +472,29 @@ button:focus
      padding: 8%;
  
  }
+ @media only screen and (min-device-width:1441px) and (max-device-width:2560px)
+  {
+    .overlay {
+        left: 2%;
+        right:2%;
+      }
+      .text {
+        color: white;
+        font-weight: 500;
+        font-size: 20px;
+       text-align: center;
+       line-height: 20px;
+       padding-top: 40%;
+      }
+      .sub{
+        position: absolute;
+        top: 90%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-weight: 500;
+        font-size: 22px;
+      }
+  }
   @media only screen and (min-device-width:768px) and (max-device-width:2560px)
   {
       .design
@@ -525,11 +548,7 @@ button:focus
         transform: translate(-50%, -50%);
         font-weight: 500;
       }
-      .icons
-      {
-          width: 65px;
-          /* padding-left: 5%; */
-      }
+     
       .head{
           padding-top: 10%;
           padding-bottom: 14%;
