--- a/Learners.css
+++ b/Learners.css
@@ -559,6 +559,80 @@ button:focus
       }
   }
 
+
+  
+
+
+html, body {
+	height: 100%;
+}
+body {
+	background: #151515;
+	font-family: "roboto-regular", sans-serif;
+	font-size: 1.6rem;
+	line-height: 3rem;
+	color: #6e6e6e;
+}
+
+
+
+#main-404-content {
+	background: #151515;
+	width: 100%;
+	height: 100%;
+	min-height: 720px;
+	z-index: 600;
+	position: relative;
+
+	-webkit-transform: translateZ(0);
+	-webkit-backface-visibility: hidden;
+
+	-moz-transition: transform 0.4s ease-in-out;
+	-o-transition: transform 0.4s ease-in-out;
+	-webkit-transition: transform 0.4s ease-in-out;
+	-ms-transition: transform 0.4s ease-in-out;
+	transition: transform 0.4s ease-in-out;
+}
+#main-404-content.menu-is-open {
+	-webkit-transform: translateX(-260px);
+	-ms-transform: translateX(-260px);
+	transform: translateX(-260px);
+}
+
+/* static background */
+#main-404-content.main-content-static {
+	background-image: url(../images/slides/greens.jpg);
+	background-repeat: no-repeat;
+	background-position: center;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	background-size: cover;
+}
+
+/* slideshow background */
+#main-404-content.main-content-slides {
+	height: 100% !important;
+}
+
+/* particle background */
+#main-404-content.main-content-particle-js {
+	background: #020507;
+	overflow: hidden;
+}
+#main-404-content.main-content-particle-js .pg-canvas {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100% !important;
+	width: 100% !important;
+	opacity: .15;
+}
+#main-404-content.main-content-particle-js .shadow-overlay {
+	display: none;
+}
+
+
+
   
   
  
