--- a/Learners.css
+++ b/Learners.css
@@ -469,7 +469,7 @@ button:focus
   }
  .purpose
  {
-     padding: 8%;
+     padding-bottom: 8%;
  
  }
  @media only screen and (min-device-width:1441px) and (max-device-width:2560px)
@@ -514,6 +514,11 @@ button:focus
       {
     background-color: #008CBA;
     }
+    .purpose
+ {
+     padding-bottom: 20%;
+ 
+ }
   }
   @media only screen and (min-device-width:319px) and (max-device-width:425px)
   {
